[package]
name = "nes"
version = "0.1.0"
authors = ["Ben Godin <ben.godin@hotmail.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.4.3"
rand = "0.7.3"
log = "0.4.8"
simplelog = "0.8.0"
flume = "0.10.1"
ndarray = "0.14.0"
lazy_static = "1.4.0"
portaudio = "0.7.0"

[dependencies.sdl2]
version = "0.34.0"
default-features = false
features = ["gfx"]