[package]
name = "rustynes"
version = "0.2.0"
authors = ["Ben Godin <bgodin1995@gmail.com>"]
edition = "2018"

[dependencies]
num_enum = "0.4.3"
rand = "0.7.3"
log = "0.4.8"
flume = "0.10.1"
ndarray = "0.14.0"
lazy_static = "1.4.0"
serde_derive = "1.0.132"
serde_json = "1.0.73"
serde = {version = "1.0.132", features = ["derive", "serde_derive"]}
clap = {version = "2.33.3", features = ["yaml"]}
sdl2 = {version = "0.34.0", default-features = false, features = ["gfx", "image"]}
